--- a/package.json
+++ b/package.json
@@ -11,12 +11,27 @@
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-sitemap": "^2.2.29",
+    "gatsby-plugin-styled-components": "^3.1.20",
+    "gatsby-plugin-transition-link": "^1.18.0",
+    "gatsby-remark-images": "^3.1.49",
+    "gatsby-remark-lazy-load": "^1.0.2",
+    "gatsby-remark-prismjs": "^3.3.35",
+    "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-remark-relative-images-v2": "^0.1.5",
     "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-transformer-remark": "^2.6.58",
     "gatsby-transformer-sharp": "^2.3.13",
+    "gsap": "^3.2.4",
+    "lazysizes": "^5.2.0",
+    "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "^5.0.1",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
