--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-manifest": "^2.2.39",
+    "gatsby-plugin-netlify-cms": "^4.1.41",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
@@ -24,12 +25,14 @@
     "gatsby-transformer-sharp": "^2.3.13",
     "gsap": "^3.2.4",
     "lazysizes": "^5.2.0",
+    "netlify-cms-app": "^2.11.29",
     "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-is": "^16.13.0",
     "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2"
   },
