--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "version": "0.1.0",
   "author": "Robson Alves <robsonalves.dev@gmail.com>",
   "dependencies": {
+    "algoliasearch": "^4.1.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-algolia-search": "0.5.0",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-netlify-cms": "^4.1.41",
     "gatsby-plugin-offline": "^3.0.32",
@@ -32,6 +35,7 @@
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^6.3.0",
     "react-is": "^16.13.0",
     "styled-components": "^5.0.1",
     "styled-media-query": "^2.1.2"
