--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,5 +24,5 @@ collections:
           format: 'YYYY-MM-DD hh:mm:ss',
         }
       - { label: 'Tags', name: 'tags', widget: 'list', default: [''] }
-      - { label: 'image', name: 'thumbnail', widget: 'image' }
+      - { label: 'image', name: 'image', widget: 'image' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
