--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-algolia-search": "0.5.0",
+    "gatsby-plugin-feed": "^2.3.29",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-netlify-cms": "^4.1.41",
     "gatsby-plugin-offline": "^3.0.32",
