--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-algolia-search": "0.5.0",
     "gatsby-plugin-feed": "^2.3.29",
+    "gatsby-plugin-google-analytics": "^2.1.38",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-netlify-cms": "^4.1.41",
     "gatsby-plugin-offline": "^3.0.32",
