--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sitemap": "^2.2.29",
     "gatsby-plugin-styled-components": "^3.1.20",
     "gatsby-plugin-transition-link": "^1.18.0",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.1.49",
     "gatsby-remark-lazy-load": "^1.0.2",
     "gatsby-remark-prismjs": "^3.3.35",
